--- a/index.html
+++ b/index.html
@@ -1,150 +1,60 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Cricket Strike Rate Analyzer</title>
-  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-  <style>
-    body {
-      font-family: 'Segoe UI', sans-serif;
-      background: #f9f9f9;
-      color: #333;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      padding: 2rem;
+function calculateStrikeRate() {
+  const name = document.getElementById('playerName').value;
+  const runs = parseInt(document.getElementById('runs').value);
+  const balls = parseInt(document.getElementById('balls').value);
+  const matchType = document.getElementById('matchType').value;
+  const output = document.getElementById('output');
+  const strikeImage = document.getElementById('strikeImage');
+
+  if (!name || isNaN(runs) || isNaN(balls) || !matchType) {
+    output.innerHTML = "Please fill in all fields.";
+    strikeImage.innerHTML = '';
+    return;
+  }
+
+  const strikeRate = ((runs / balls) * 100).toFixed(2);
+  let comment = "";
+  let imageHTML = "";
+
+  if (matchType === "T20") {
+    if (strikeRate > 150) {
+      comment = "Massive hitting! 🔥 Perfect T20 innings.";
+      imageHTML = "<img src='https://media.giphy.com/media/3o7TKzBqVrXy38U5s4/giphy.gif' width='150'/>";
+    } else if (strikeRate >= 100) {
+      comment = "Decent T20 performance.";
+      imageHTML = "<img src='https://media.giphy.com/media/l3vR7z6kxkzG8f7J6/giphy.gif' width='150'/>";
+    } else {
+      comment = "Too slow for a T20! 👎";
+      imageHTML = "<img src='https://media.giphy.com/media/l2JdYkk8zT78CEjEA/giphy.gif' width='150'/>";
     }
-
-    h1 {
-      color: #2c3e50;
-      margin-bottom: 1rem;
+  } else if (matchType === "ODI") {
+    if (strikeRate > 120) {
+      comment = "Aggressive and effective ODI play!";
+      imageHTML = "<img src='https://media.giphy.com/media/3o6Zt8MGvD1RYYUwac/giphy.gif' width='150'/>";
+    } else if (strikeRate >= 75) {
+      comment = "Balanced innings for an ODI.";
+      imageHTML = "<img src='https://media.giphy.com/media/3oriO0OEd9QIDdllqo/giphy.gif' width='150'/>";
+    } else {
+      comment = "Bit slow for an ODI.";
+      imageHTML = "<img src='https://media.giphy.com/media/l0Ex2f8LmB1x5gnIQ/giphy.gif' width='150'/>";
     }
-
-    .form-container {
-      background: white;
-      padding: 2rem;
-      border-radius: 12px;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.1);
-      width: 100%;
-      max-width: 500px;
+  } else if (matchType === "Test") {
+    if (strikeRate > 80) {
+      comment = "Fast scorer for a Test match!";
+      imageHTML = "<img src='https://media.giphy.com/media/xT1R9ZlgnfNTDg29s0/giphy.gif' width='150'/>";
+    } else if (strikeRate >= 40) {
+      comment = "Solid defense, classic Test cricket.";
+      imageHTML = "<img src='https://media.giphy.com/media/xT1XGzEINB9jR2WnDq/giphy.gif' width='150'/>";
+    } else {
+      comment = "Digging in deep, nice defending!";
+      imageHTML = "<img src='https://media.giphy.com/media/3o6ZsYk7IhYY6sq2fu/giphy.gif' width='150'/>";
     }
+  }
 
-    input, select, button {
-      width: 100%;
-      padding: 0.7rem;
-      margin: 0.5rem 0;
-      border: 1px solid #ccc;
-      border-radius: 6px;
-      font-size: 1rem;
-    }
+  output.innerHTML = `<strong>${name}</strong> scored <strong>${runs}</strong> runs off <strong>${balls}</strong> balls.<br>
+  <strong>Strike Rate:</strong> ${strikeRate}<br><em>${comment}</em>`;
 
-    button {
-      background-color: #27ae60;
-      color: white;
-      font-weight: bold;
-      cursor: pointer;
-    }
+  strikeImage.innerHTML = imageHTML;
 
-    button:hover {
-      background-color: #219150;
-    }
-
-    #output {
-      margin-top: 1rem;
-      font-size: 1.2rem;
-      text-align: center;
-    }
-
-    canvas {
-      margin-top: 2rem;
-      max-width: 400px;
-    }
-  </style>
-</head>
-<body>
-
-  <h1>Cricket Strike Rate Analyzer 🏏</h1>
-  <div class="form-container">
-    <input type="text" id="playerName" placeholder="Enter player name" />
-    <input type="number" id="runs" placeholder="Enter total runs scored" />
-    <input type="number" id="balls" placeholder="Enter balls faced" />
-    
-    <select id="matchType">
-      <option value="">Select Match Format</option>
-      <option value="T20">T20</option>
-      <option value="ODI">ODI</option>
-      <option value="Test">Test</option>
-    </select>
-
-    <button onclick="calculateStrikeRate()">Analyze</button>
-
-    <div id="output"></div>
-    <canvas id="chart"></canvas>
-  </div>
-
-  <script>
-    function calculateStrikeRate() {
-      const name = document.getElementById('playerName').value;
-      const runs = parseInt(document.getElementById('runs').value);
-      const balls = parseInt(document.getElementById('balls').value);
-      const matchType = document.getElementById('matchType').value;
-      const output = document.getElementById('output');
-
-      if (!name || isNaN(runs) || isNaN(balls) || !matchType) {
-        output.innerHTML = "Please fill in all fields.";
-        return;
-      }
-
-      const strikeRate = ((runs / balls) * 100).toFixed(2);
-
-      let comment = "";
-
-      if (matchType === "T20") {
-        if (strikeRate > 150) comment = "Massive hitting! 🔥 Perfect T20 innings.";
-        else if (strikeRate >= 100) comment = "Decent T20 performance.";
-        else comment = "Too slow for a T20! 👎";
-      } else if (matchType === "ODI") {
-        if (strikeRate > 120) comment = "Aggressive and effective ODI play!";
-        else if (strikeRate >= 75) comment = "Balanced innings for an ODI.";
-        else comment = "Bit slow for an ODI.";
-      } else if (matchType === "Test") {
-        if (strikeRate > 80) comment = "Fast scorer for a Test match!";
-        else if (strikeRate >= 40) comment = "Solid defense, classic Test cricket.";
-        else comment = "Digging in deep, nice defending!";
-      }
-
-      output.innerHTML = `<strong>${name}</strong> scored <strong>${runs}</strong> runs off <strong>${balls}</strong> balls. <br>
-      <strong>Strike Rate:</strong> ${strikeRate}<br><em>${comment}</em>`;
-
-      renderChart(runs, balls);
-    }
-
-    function renderChart(runs, balls) {
-      const ctx = document.getElementById('chart').getContext('2d');
-      if (window.strikeChart) window.strikeChart.destroy(); // clear old chart
-
-      window.strikeChart = new Chart(ctx, {
-        type: 'doughnut',
-        data: {
-          labels: ['Runs', 'Balls Remaining'],
-          datasets: [{
-            label: 'Strike Rate Chart',
-            data: [runs, balls - runs],
-            backgroundColor: ['#27ae60', '#e74c3c'],
-            borderWidth: 1
-          }]
-        },
-        options: {
-          responsive: true,
-          plugins: {
-            legend: {
-              position: 'bottom'
-            }
-          }
-        }
-      });
-    }
-  </script>
-</body>
-</html>
+  renderChart(runs, balls);
+}
