--- a/index.html
+++ b/index.html
@@ -1,142 +1,187 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Cricket Strike Rate Analyzer</title>
-  <style>
-    body {
-      font-family: 'Segoe UI', sans-serif;
-      background-color: #f4f8fb;
-      padding: 20px;
-      text-align: center;
-    }
-    input, select, button {
-      padding: 10px;
-      margin: 8px;
-      font-size: 16px;
-    }
-    #output {
-      margin-top: 20px;
-      font-size: 18px;
-    }
-    #strikeImage img {
-      margin-top: 15px;
-    }
-    canvas {
-      margin-top: 30px;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>ICC Cricket Player Stats</title>
+
+    <!-- External Libraries -->
+    <link href="https://cdn.jsdelivr.net/npm/font-awesome/css/font-awesome.min.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" rel="stylesheet">
+    
+    <!-- Styles -->
+    <style>
+        body {
+            background-color: #121212;
+            color: white;
+            font-family: 'Arial', sans-serif;
+            margin: 0;
+            padding: 0;
+            overflow-x: hidden;
+        }
+
+        header {
+            text-align: center;
+            padding: 40px;
+            background: #003b49;
+        }
+
+        header h1 {
+            font-size: 50px;
+            font-weight: 700;
+            margin: 0;
+            color: #00bcd4;
+        }
+
+        .flag {
+            width: 60px;
+            height: 40px;
+            border-radius: 4px;
+        }
+
+        .player-container {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            margin-top: 50px;
+        }
+
+        .input-section {
+            display: flex;
+            justify-content: center;
+            margin-bottom: 20px;
+        }
+
+        .input-section input {
+            padding: 12px;
+            font-size: 16px;
+            width: 250px;
+            border: 1px solid #ccc;
+            border-radius: 4px;
+        }
+
+        .input-section button {
+            padding: 12px;
+            margin-left: 10px;
+            background-color: #00bcd4;
+            color: white;
+            font-size: 16px;
+            border: none;
+            cursor: pointer;
+            border-radius: 4px;
+        }
+
+        .stats-card {
+            background: #003b49;
+            padding: 20px;
+            border-radius: 8px;
+            width: 400px;
+            text-align: center;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+        }
+
+        .stats-card img {
+            width: 100px;
+            height: 100px;
+            border-radius: 50%;
+        }
+
+        .player-stats {
+            margin-top: 20px;
+        }
+
+        .player-stats span {
+            display: block;
+            margin: 10px;
+            font-size: 18px;
+        }
+
+        footer {
+            background-color: #222;
+            color: #bbb;
+            text-align: center;
+            padding: 15px;
+            position: fixed;
+            bottom: 0;
+            width: 100%;
+        }
+
+        .flag-container {
+            display: flex;
+            align-items: center;
+            margin-top: 20px;
+        }
+
+        .flag-container img {
+            margin-right: 10px;
+        }
+    </style>
 </head>
 <body>
 
-  <h1>Cricket Strike Rate Analyzer</h1>
-  
-  <input type="text" id="playerName" placeholder="Player Name" required>
-  <input type="number" id="runs" placeholder="Runs Scored" required>
-  <input type="number" id="balls" placeholder="Balls Faced" required>
-  
-  <select id="matchType" required>
-    <option value="">Select Match Type</option>
-    <option value="T20">T20</option>
-    <option value="ODI">ODI</option>
-    <option value="Test">Test</option>
-  </select>
+<header>
+    <h1>ICC Cricket Stats & Player Recognition</h1>
+</header>
 
-  <button onclick="calculateStrikeRate()">Analyze</button>
+<!-- Music Player (you can add ICC's official theme music file here) -->
+<audio id="icc-music" loop autoplay>
+    <source src="icc_theme_music.mp3" type="audio/mp3">
+    Your browser does not support the audio element.
+</audio>
 
-  <div id="output"></div>
-  <div id="strikeImage"></div>
-  <canvas id="chartCanvas" width="400" height="200"></canvas>
+<!-- Player Stats Section -->
+<div class="player-container">
+    <div class="input-section">
+        <input type="text" id="playerName" placeholder="Enter Player Name" />
+        <button onclick="searchPlayer()">Search</button>
+    </div>
 
-  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-  <script>
-    function calculateStrikeRate() {
-      const name = document.getElementById('playerName').value;
-      const runs = parseInt(document.getElementById('runs').value);
-      const balls = parseInt(document.getElementById('balls').value);
-      const matchType = document.getElementById('matchType').value;
-      const output = document.getElementById('output');
-      const strikeImage = document.getElementById('strikeImage');
+    <!-- Player Stats Display -->
+    <div class="stats-card" id="statsCard" style="display: none;">
+        <img id="playerImage" src="" alt="Player Image" />
+        <h2 id="playerNameDisplay"></h2>
+        <div class="flag-container">
+            <img id="playerFlag" class="flag" src="" alt="Country Flag" />
+            <span id="playerCountry"></span>
+        </div>
 
-      if (!name || isNaN(runs) || isNaN(balls) || !matchType || balls === 0) {
-        output.innerHTML = "⚠️ Please fill in all fields correctly.";
-        strikeImage.innerHTML = '';
-        return;
-      }
+        <div class="player-stats">
+            <span id="battingStats">Batting: -</span>
+            <span id="bowlingStats">Bowling: -</span>
+        </div>
+    </div>
+</div>
 
-      const strikeRate = ((runs / balls) * 100).toFixed(2);
-      let comment = "";
-      let imageHTML = "";
+<!-- Footer -->
+<footer>
+    <p>ICC Cricket Stats & Player Recognition | Powered by JavaScript</p>
+</footer>
 
-      if (matchType === "T20") {
-        if (strikeRate > 150) {
-          comment = "Massive hitting! 🔥 Perfect T20 innings.";
-          imageHTML = '<img src="https://media.giphy.com/media/3o6Zt481isNVuQI1l6/giphy.gif" width="180">';
-        } else if (strikeRate >= 100) {
-          comment = "Decent T20 performance.";
-          imageHTML = '<img src="https://media.giphy.com/media/l0MYt5jPR6QX5pnqM/giphy.gif" width="180">';
+<!-- JavaScript Code -->
+<script>
+    const players = {
+        "Virat Kohli": { country: "India", flag: "https://www.countryflags.io/in/flat/64.png", batting: "Average: 52.04", bowling: "Economy: -", image: "https://upload.wikimedia.org/wikipedia/commons/thumb/4/43/Virat_Kohli_2017.jpg/800px-Virat_Kohli_2017.jpg" },
+        "Rohit Sharma": { country: "India", flag: "https://www.countryflags.io/in/flat/64.png", batting: "Average: 48.96", bowling: "Economy: -", image: "https://upload.wikimedia.org/wikipedia/commons/thumb/0/0f/Rohit_Sharma_%28Indian_cricketer%29.jpg/800px-Rohit_Sharma_%28Indian_cricketer%29.jpg" },
+        "MS Dhoni": { country: "India", flag: "https://www.countryflags.io/in/flat/64.png", batting: "Average: 40.99", bowling: "Economy: -", image: "https://upload.wikimedia.org/wikipedia/commons/0/0f/MS_Dhoni_2019.jpg" },
+        "Shaheen Afridi": { country: "Pakistan", flag: "https://www.countryflags.io/pk/flat/64.png", batting: "-", bowling: "Economy: 4.57", image: "https://upload.wikimedia.org/wikipedia/commons/thumb/7/7d/Shaheen_Shah_Afridi_2021.jpg/800px-Shaheen_Shah_Afridi_2021.jpg" },
+        "David Warner": { country: "Australia", flag: "https://www.countryflags.io/au/flat/64.png", batting: "Average: 44.88", bowling: "Economy: -", image: "https://upload.wikimedia.org/wikipedia/commons/thumb/c/c3/David_Warner_2019.jpg/800px-David_Warner_2019.jpg" },
+        "Ben Stokes": { country: "England", flag: "https://www.countryflags.io/gb/flat/64.png", batting: "Average: 39.34", bowling: "Economy: 4.87", image: "https://upload.wikimedia.org/wikipedia/commons/thumb/3/36/Ben_Stokes_%28England_cricketer%29.jpg/800px-Ben_Stokes_%28England_cricketer%29.jpg" },
+        "Chris Gayle": { country: "West Indies", flag: "https://www.countryflags.io/jm/flat/64.png", batting: "Average: 40.47", bowling: "Economy: -", image: "https://upload.wikimedia.org/wikipedia/commons/thumb/5/5f/Chris_Gayle_2016.jpg/800px-Chris_Gayle_2016.jpg" }
+    };
+
+    function searchPlayer() {
+        const playerName = document.getElementById("playerName").value.trim();
+
+        if (players[playerName]) {
+            const player = players[playerName];
+
+            document.getElementById("statsCard").style.display = "block";
+            document.getElementById("playerNameDisplay").innerText = playerName;
+            document.getElementById("playerFlag").src = player.flag;
+            document.getElementById("playerCountry").innerText = player.country;
+            document.getElementById("battingStats").innerText = player.batting;
+            document.getElementById("bowlingStats").innerText = player.bowling;
+            document.getElementById("playerImage").src = player.image;
         } else {
-          comment = "Too slow for a T20! 👎";
-          imageHTML = '<img src="https://media.giphy.com/media/l2JHRhAtnJSDNJ2py/giphy.gif" width="180">';
-        }
-      } else if (matchType === "ODI") {
-        if (strikeRate > 120) {
-          comment = "Aggressive and effective ODI play!";
-          imageHTML = '<img src="https://media.giphy.com/media/3o7btWZHzx6fM7oBJS/giphy.gif" width="180">';
-        } else if (strikeRate >= 75) {
-          comment = "Balanced innings for an ODI.";
-          imageHTML = '<img src="https://media.giphy.com/media/3o7aD2saalBwwftBIY/giphy.gif" width="180">';
-        } else {
-          comment = "Bit slow for an ODI.";
-          imageHTML = '<img src="https://media.giphy.com/media/3oKIPtjElfqwMOTbH2/giphy.gif" width="180">';
-        }
-      } else if (matchType === "Test") {
-        if (strikeRate > 80) {
-          comment = "Fast scorer for a Test match!";
-          imageHTML = '<img src="https://media.giphy.com/media/l0HlRincY2Yv4qyt6/giphy.gif" width="180">';
-        } else if (strikeRate >= 40) {
-          comment = "Solid defense, classic Test cricket.";
-          imageHTML = '<img src="https://media.giphy.com/media/xT4uQulxzV39haRFjG/giphy.gif" width="180">';
-        } else {
-          comment = "Digging in deep, nice defending!";
-          imageHTML = '<img src="https://media.giphy.com/media/3o6ZsVZlf9xkQj2ZCk/giphy.gif" width="180">';
-        }
-      }
-
-      output.innerHTML = `${name} scored ${runs} runs off ${balls} balls.<br>
-                          <strong>Strike Rate:</strong> ${strikeRate}<br>${comment}`;
-      strikeImage.innerHTML = imageHTML;
-
-      renderChart(runs, balls);
-    }
-
-    function renderChart(runs, balls) {
-      const ctx = document.getElementById('chartCanvas').getContext('2d');
-      if (window.strikeChart) {
-        window.strikeChart.destroy(); // prevent duplicate charts
-      }
-
-      window.strikeChart = new Chart(ctx, {
-        type: 'bar',
-        data: {
-          labels: ['Runs', 'Balls'],
-          datasets: [{
-            label: 'Player Stats',
-            data: [runs, balls],
-            backgroundColor: ['#3498db', '#2ecc71']
-          }]
-        },
-        options: {
-          responsive: true,
-          scales: {
-            y: {
-              beginAtZero: true
-            }
-          }
-        }
-      });
-    }
-  </script>
-
-</body>
-</html>
