--- a/index.html
+++ b/index.html
@@ -1,198 +1,265 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ICC Cricket Player Stats</title>
-
-    <!-- External Libraries -->
-    <link href="https://cdn.jsdelivr.net/npm/font-awesome/css/font-awesome.min.css" rel="stylesheet">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" rel="stylesheet">
-    
-    <!-- Styles -->
-    <style>
-        body {
-            background-color: #121212;
-            color: white;
-            font-family: 'Arial', sans-serif;
-            margin: 0;
-            padding: 0;
-            overflow-x: hidden;
-        }
-
-        header {
-            text-align: center;
-            padding: 40px;
-            background: #003b49;
-        }
-
-        header h1 {
-            font-size: 50px;
-            font-weight: 700;
-            margin: 0;
-            color: #00bcd4;
-        }
-
-        .flag {
-            width: 60px;
-            height: 40px;
-            border-radius: 4px;
-        }
-
-        .player-container {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            margin-top: 50px;
-        }
-
-        .input-section {
-            display: flex;
-            justify-content: center;
-            margin-bottom: 20px;
-        }
-
-        .input-section input {
-            padding: 12px;
-            font-size: 16px;
-            width: 250px;
-            border: 1px solid #ccc;
-            border-radius: 4px;
-        }
-
-        .input-section button {
-            padding: 12px;
-            margin-left: 10px;
-            background-color: #00bcd4;
-            color: white;
-            font-size: 16px;
-            border: none;
-            cursor: pointer;
-            border-radius: 4px;
-        }
-
-        .stats-card {
-            background: #003b49;
-            padding: 20px;
-            border-radius: 8px;
-            width: 400px;
-            text-align: center;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-        }
-
-        .stats-card img {
-            width: 100px;
-            height: 100px;
-            border-radius: 50%;
-        }
-
-        .player-stats {
-            margin-top: 20px;
-        }
-
-        .player-stats span {
-            display: block;
-            margin: 10px;
-            font-size: 18px;
-        }
-
-        footer {
-            background-color: #222;
-            color: #bbb;
-            text-align: center;
-            padding: 15px;
-            position: fixed;
-            bottom: 0;
-            width: 100%;
-        }
-
-        .flag-container {
-            display: flex;
-            align-items: center;
-            margin-top: 20px;
-        }
-
-        .flag-container img {
-            margin-right: 10px;
-        }
-    </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>ICC Cricket Stats & Player Recognition</title>
+  <!-- Font Awesome for icons (optional) -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-dYc1/1A3pJ1+NjNafc1/0xHbUnN1R51pWJ8e4m1Gm+Y6UCBubWXJTHW3aZh8LYh+9p3PjKZqjU+nIVIcq+8L0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <style>
+    /* Global Styles */
+    body {
+      margin: 0;
+      font-family: 'Arial', sans-serif;
+      background: linear-gradient(135deg, #0a0a0a, #2c3e50);
+      color: #fff;
+      overflow-x: hidden;
+    }
+    header {
+      background: #003b49;
+      text-align: center;
+      padding: 30px 20px;
+      position: relative;
+    }
+    header h1 {
+      margin: 0;
+      font-size: 2.8rem;
+      color: #00bcd4;
+    }
+    header img.logo {
+      width: 120px;
+      position: absolute;
+      top: 10px;
+      left: 20px;
+    }
+    /* Music Player: Hide default controls */
+    audio {
+      display: none;
+    }
+    /* Main Container */
+    .container {
+      max-width: 600px;
+      margin: 60px auto 100px auto;
+      padding: 20px;
+      background: rgba(0, 59, 73, 0.85);
+      border-radius: 12px;
+      box-shadow: 0 0 20px rgba(0,0,0,0.5);
+      text-align: center;
+    }
+    .input-section {
+      margin-bottom: 20px;
+    }
+    .input-section input {
+      padding: 12px;
+      font-size: 1rem;
+      width: 70%;
+      border: none;
+      border-radius: 4px;
+      margin-right: 5px;
+    }
+    .input-section button {
+      padding: 12px 18px;
+      font-size: 1rem;
+      background-color: #00bcd4;
+      border: none;
+      border-radius: 4px;
+      cursor: pointer;
+      transition: background-color 0.3s ease;
+    }
+    .input-section button:hover {
+      background-color: #0097a7;
+    }
+    /* Stats Card */
+    .stats-card {
+      display: none;
+      background: #002d3a;
+      padding: 20px;
+      border-radius: 8px;
+      margin-top: 20px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.4);
+      animation: fadeIn 0.8s ease-in-out;
+    }
+    .stats-card img.player-image {
+      width: 120px;
+      height: 120px;
+      border-radius: 50%;
+      object-fit: cover;
+      border: 3px solid #00bcd4;
+    }
+    .stats-card h2 {
+      margin: 15px 0 10px;
+      font-size: 1.8rem;
+      color: #00bcd4;
+    }
+    .flag-container {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      margin: 10px 0;
+    }
+    .flag-container img.flag {
+      width: 80px;
+      height: 50px;
+      border-radius: 4px;
+      animation: wave 2s infinite;
+      transform-origin: 50% 0%;
+      margin-right: 10px;
+    }
+    .player-stats span {
+      display: block;
+      margin: 10px 0;
+      font-size: 1.1rem;
+    }
+    /* Footer */
+    footer {
+      text-align: center;
+      background: #000;
+      padding: 15px;
+      position: fixed;
+      bottom: 0;
+      width: 100%;
+      font-size: 0.9rem;
+      color: #ccc;
+    }
+    /* Animations */
+    @keyframes wave {
+      0% { transform: rotate(0deg); }
+      25% { transform: rotate(3deg); }
+      50% { transform: rotate(0deg); }
+      75% { transform: rotate(-3deg); }
+      100% { transform: rotate(0deg); }
+    }
+    @keyframes fadeIn {
+      from { opacity: 0; transform: scale(0.9); }
+      to { opacity: 1; transform: scale(1); }
+    }
+  </style>
 </head>
 <body>
 
-<header>
+  <!-- Header with ICC Logo -->
+  <header>
+    <img src="https://upload.wikimedia.org/wikipedia/en/thumb/d/d4/International_Cricket_Council_%28logo%29.svg/512px-International_Cricket_Council_%28logo%29.svg.png" alt="ICC Logo" class="logo">
     <h1>ICC Cricket Stats & Player Recognition</h1>
-</header>
+  </header>
 
-<!-- Music Player (you can add ICC's official theme music file here) -->
-<audio id="icc-music" loop autoplay>
-    <source src="icc_theme_music.mp3" type="audio/mp3">
+  <!-- Background Music -->
+  <!-- Replace the src URL with your permitted ICC theme music file if available -->
+  <audio id="icc-music" loop autoplay>
+    <source src="https://www.bensound.com/bensound-music/bensound-creativeminds.mp3" type="audio/mp3">
     Your browser does not support the audio element.
-</audio>
+  </audio>
 
-<!-- Player Stats Section -->
-<div class="player-container">
+  <!-- Main Container -->
+  <div class="container">
     <div class="input-section">
-        <input type="text" id="playerName" placeholder="Enter Player Name" />
-        <button onclick="searchPlayer()">Search</button>
+      <input type="text" id="playerName" placeholder="Enter Player Name (e.g., virat kohli)" />
+      <button onclick="searchPlayer()">Search</button>
     </div>
 
-    <!-- Player Stats Display -->
-    <div class="stats-card" id="statsCard" style="display: none;">
-        <img id="playerImage" src="" alt="Player Image" />
-        <h2 id="playerNameDisplay"></h2>
-        <div class="flag-container">
-            <img id="playerFlag" class="flag" src="" alt="Country Flag" />
-            <span id="playerCountry"></span>
-        </div>
-
-        <div class="player-stats">
-            <span id="battingStats">Batting: -</span>
-            <span id="bowlingStats">Bowling: -</span>
-        </div>
+    <!-- Stats Card -->
+    <div class="stats-card" id="statsCard">
+      <img id="playerImage" class="player-image" src="" alt="Player Image">
+      <h2 id="playerNameDisplay"></h2>
+      <div class="flag-container">
+        <img id="playerFlag" class="flag" src="" alt="Country Flag">
+        <span id="playerCountry"></span>
+      </div>
+      <div class="player-stats">
+        <span id="battingStats">Batting: -</span>
+        <span id="bowlingStats">Bowling: -</span>
+      </div>
     </div>
-</div>
+  </div>
 
-<!-- Footer -->
-<footer>
-    <p>ICC Cricket Stats & Player Recognition | Powered by JavaScript</p>
-</footer>
+  <!-- Footer -->
+  <footer>
+    ICC Cricket Stats & Player Recognition | Powered by HTML, CSS, and JavaScript
+  </footer>
 
-<!-- JavaScript Code -->
-<script>
+  <!-- JavaScript Code -->
+  <script>
+    // Lowercase keys for case-insensitive search
     const players = {
-        "Virat Kohli": { country: "India", flag: "https://www.countryflags.io/in/flat/64.png", batting: "Average: 52.04", bowling: "Economy: -", image: "https://upload.wikimedia.org/wikipedia/commons/thumb/4/43/Virat_Kohli_2017.jpg/800px-Virat_Kohli_2017.jpg" },
-        "Rohit Sharma": { country: "India", flag: "https://www.countryflags.io/in/flat/64.png", batting: "Average: 48.96", bowling: "Economy: -", image: "https://upload.wikimedia.org/wikipedia/commons/thumb/0/0f/Rohit_Sharma_%28Indian_cricketer%29.jpg/800px-Rohit_Sharma_%28Indian_cricketer%29.jpg" },
-        "MS Dhoni": { country: "India", flag: "https://www.countryflags.io/in/flat/64.png", batting: "Average: 40.99", bowling: "Economy: -", image: "https://upload.wikimedia.org/wikipedia/commons/0/0f/MS_Dhoni_2019.jpg" },
-        "Shaheen Afridi": { country: "Pakistan", flag: "https://www.countryflags.io/pk/flat/64.png", batting: "-", bowling: "Economy: 4.57", image: "https://upload.wikimedia.org/wikipedia/commons/thumb/7/7d/Shaheen_Shah_Afridi_2021.jpg/800px-Shaheen_Shah_Afridi_2021.jpg" },
-        "David Warner": { country: "Australia", flag: "https://www.countryflags.io/au/flat/64.png", batting: "Average: 44.88", bowling: "Economy: -", image: "https://upload.wikimedia.org/wikipedia/commons/thumb/c/c3/David_Warner_2019.jpg/800px-David_Warner_2019.jpg" },
-        "Ben Stokes": { country: "England", flag: "https://www.countryflags.io/gb/flat/64.png", batting: "Average: 39.34", bowling: "Economy: 4.87", image: "https://upload.wikimedia.org/wikipedia/commons/thumb/3/36/Ben_Stokes_%28England_cricketer%29.jpg/800px-Ben_Stokes_%28England_cricketer%29.jpg" },
-        "Chris Gayle": { country: "West Indies", flag: "https://www.countryflags.io/jm/flat/64.png", batting: "Average: 40.47", bowling: "Economy: -", image: "https://upload.wikimedia.org/wikipedia/commons/thumb/5/5f/Chris_Gayle_2016.jpg/800px-Chris_Gayle_2016.jpg" }
+      "virat kohli": {
+        country: "India",
+        flag: "https://flagcdn.com/w320/in.png",
+        batting: "Avg: 52.04, SR: 130+",
+        bowling: "N/A",
+        image: "https://upload.wikimedia.org/wikipedia/commons/thumb/4/43/Virat_Kohli_2017.jpg/800px-Virat_Kohli_2017.jpg"
+      },
+      "rohit sharma": {
+        country: "India",
+        flag: "https://flagcdn.com/w320/in.png",
+        batting: "Avg: 48.96, SR: 140+",
+        bowling: "N/A",
+        image: "https://upload.wikimedia.org/wikipedia/commons/thumb/0/0f/Rohit_Sharma_%28Indian_cricketer%29.jpg/800px-Rohit_Sharma_%28Indian_cricketer%29.jpg"
+      },
+      "ms dhoni": {
+        country: "India",
+        flag: "https://flagcdn.com/w320/in.png",
+        batting: "Avg: 40.99, SR: 87 (Test)",
+        bowling: "N/A",
+        image: "https://upload.wikimedia.org/wikipedia/commons/0/0f/MS_Dhoni_2019.jpg"
+      },
+      "shaheen afridi": {
+        country: "Pakistan",
+        flag: "https://flagcdn.com/w320/pk.png",
+        batting: "N/A",
+        bowling: "Econ: 4.57, SR: 24",
+        image: "https://upload.wikimedia.org/wikipedia/commons/thumb/7/7d/Shaheen_Shah_Afridi_2021.jpg/800px-Shaheen_Shah_Afridi_2021.jpg"
+      },
+      "david warner": {
+        country: "Australia",
+        flag: "https://flagcdn.com/w320/au.png",
+        batting: "Avg: 44.88, SR: 138+",
+        bowling: "N/A",
+        image: "https://upload.wikimedia.org/wikipedia/commons/thumb/c/c3/David_Warner_2019.jpg/800px-David_Warner_2019.jpg"
+      },
+      "ben stokes": {
+        country: "England",
+        flag: "https://flagcdn.com/w320/gb-eng.png",
+        batting: "Avg: 39.34, SR: 105+",
+        bowling: "Econ: 4.87, SR: 38",
+        image: "https://upload.wikimedia.org/wikipedia/commons/thumb/3/36/Ben_Stokes_%28England_cricketer%29.jpg/800px-Ben_Stokes_%28England_cricketer%29.jpg"
+      },
+      "chris gayle": {
+        country: "West Indies",
+        flag: "https://flagcdn.com/w320/jm.png",
+        batting: "Avg: 40.47, SR: 120+",
+        bowling: "N/A",
+        image: "https://upload.wikimedia.org/wikipedia/commons/thumb/5/5f/Chris_Gayle_2016.jpg/800px-Chris_Gayle_2016.jpg"
+      }
+      // Add more players as needed in lowercase...
     };
 
     function searchPlayer() {
-        const playerName = document.getElementById("playerName").value.trim();
-
-        if (playerName !== "") {
-            if (players[playerName]) {
-                const player = players[playerName];
-
-                document.getElementById("statsCard").style.display = "block";
-                document.getElementById("playerNameDisplay").innerText = playerName;
-                document.getElementById("playerFlag").src = player.flag;
-                document.getElementById("playerCountry").innerText = player.country;
-                document.getElementById("battingStats").innerText = player.batting;
-                document.getElementById("bowlingStats").innerText = player.bowling;
-                document.getElementById("playerImage").src = player.image;
-            } else {
-                alert("Player not found! Please enter a valid player name.");
-            }
-        } else {
-            alert("Please enter a player name.");
-        }
+      // Get user input and convert to lowercase for matching
+      let inputName = document.getElementById("playerName").value.trim().toLowerCase();
+      if (!inputName) {
+        alert("Please enter a player name.");
+        return;
+      }
+      if (players.hasOwnProperty(inputName)) {
+        let player = players[inputName];
+        // Display the stats card
+        document.getElementById("statsCard").style.display = "block";
+        document.getElementById("playerNameDisplay").innerText = capitalize(inputName);
+        document.getElementById("playerFlag").src = player.flag;
+        document.getElementById("playerCountry").innerText = player.country;
+        document.getElementById("battingStats").innerText = "Batting: " + player.batting;
+        document.getElementById("bowlingStats").innerText = "Bowling: " + player.bowling;
+        document.getElementById("playerImage").src = player.image;
+      } else {
+        alert("Player not found! Please try another name.");
+      }
     }
-</script>
+
+    // Helper function to capitalize each word
+    function capitalize(str) {
+      return str.split(' ').map(word => word.charAt(0).toUpperCase() + word.slice(1)).join(' ');
+    }
+  </script>
 
 </body>
 </html>
