--- a/index.html
+++ b/index.html
@@ -173,4 +173,150 @@
     <!-- Performance Input Section (shown after identification) -->
     <div class="performance-inputs" id="performanceInputs">
       <div id="batterInputs" style="display: none;">
-        <input type="number"
+        <input type="number" id="runsScored" placeholder="Enter Runs Scored" />
+        <input type="number" id="ballsFaced" placeholder="Enter Balls Faced" />
+      </div>
+      <div id="bowlerInputs" style="display: none;">
+        <input type="number" id="runsGiven" placeholder="Enter Runs Given" />
+        <input type="number" id="ballsBowled" placeholder="Enter Balls Bowled" />
+        <input type="number" id="wicketsTaken" placeholder="Enter Wickets Taken" />
+      </div>
+      <button onclick="calculatePerformance()">Calculate Performance</button>
+    </div>
+
+    <!-- Stats Card to Display Player Info and Calculated Stats -->
+    <div class="stats-card" id="statsCard">
+      <img id="playerImage" class="player-image" src="" alt="Player Image">
+      <h2 id="playerNameDisplay"></h2>
+      <div class="flag-container">
+        <img id="playerFlag" class="flag" src="" alt="Country Flag">
+        <span id="playerCountry"></span>
+      </div>
+      <div class="player-stats" id="playerStats">
+        <!-- Calculated performance stats will appear here -->
+      </div>
+    </div>
+  </div>
+
+  <!-- Footer -->
+  <footer>
+    ICC Cricket Stats Portal | Powered by HTML, CSS, and JavaScript
+  </footer>
+
+  <!-- JavaScript Code -->
+  <script>
+    // Pre-defined players with country, flag, and image (keys in lowercase for case-insensitive matching)
+    const players = {
+      "virat kohli": {
+        country: "India",
+        flag: "https://flagcdn.com/w320/in.png",
+        image: "https://upload.wikimedia.org/wikipedia/commons/thumb/4/43/Virat_Kohli_2017.jpg/800px-Virat_Kohli_2017.jpg"
+      },
+      "rohit sharma": {
+        country: "India",
+        flag: "https://flagcdn.com/w320/in.png",
+        image: "https://upload.wikimedia.org/wikipedia/commons/thumb/0/0f/Rohit_Sharma_%28Indian_cricketer%29.jpg/800px-Rohit_Sharma_%28Indian_cricketer%29.jpg"
+      },
+      "ms dhoni": {
+        country: "India",
+        flag: "https://flagcdn.com/w320/in.png",
+        image: "https://upload.wikimedia.org/wikipedia/commons/0/0f/MS_Dhoni_2019.jpg"
+      },
+      "shaheen afridi": {
+        country: "Pakistan",
+        flag: "https://flagcdn.com/w320/pk.png",
+        image: "https://upload.wikimedia.org/wikipedia/commons/thumb/7/7d/Shaheen_Shah_Afridi_2021.jpg/800px-Shaheen_Shah_Afridi_2021.jpg"
+      },
+      "david warner": {
+        country: "Australia",
+        flag: "https://flagcdn.com/w320/au.png",
+        image: "https://upload.wikimedia.org/wikipedia/commons/thumb/c/c3/David_Warner_2019.jpg/800px-David_Warner_2019.jpg"
+      },
+      "ben stokes": {
+        country: "England",
+        flag: "https://flagcdn.com/w320/gb-eng.png",
+        image: "https://upload.wikimedia.org/wikipedia/commons/thumb/3/36/Ben_Stokes_%28England_cricketer%29.jpg/800px-Ben_Stokes_%28England_cricketer%29.jpg"
+      },
+      "chris gayle": {
+        country: "West Indies",
+        flag: "https://flagcdn.com/w320/jm.png",
+        image: "https://upload.wikimedia.org/wikipedia/commons/thumb/5/5f/Chris_Gayle_2016.jpg/800px-Chris_Gayle_2016.jpg"
+      }
+      // Add more players as needed...
+    };
+
+    let currentPlayer = null;
+    let currentRole = null;
+
+    // Step 1: Identify player based on name and role selection
+    function identifyPlayer() {
+      let inputName = document.getElementById("playerName").value.trim().toLowerCase();
+      currentRole = document.getElementById("role").value;
+      if (!inputName || !currentRole) {
+        alert("Please enter a player name and select a role (Batter or Bowler).");
+        return;
+      }
+      if (players.hasOwnProperty(inputName)) {
+        currentPlayer = players[inputName];
+        // Populate the stats card with player info
+        document.getElementById("statsCard").style.display = "block";
+        document.getElementById("playerNameDisplay").innerText = capitalize(inputName);
+        document.getElementById("playerFlag").src = currentPlayer.flag;
+        document.getElementById("playerCountry").innerText = currentPlayer.country;
+        document.getElementById("playerImage").src = currentPlayer.image;
+        // Show the appropriate performance inputs based on role
+        document.getElementById("performanceInputs").style.display = "block";
+        if (currentRole === "batter") {
+          document.getElementById("batterInputs").style.display = "block";
+          document.getElementById("bowlerInputs").style.display = "none";
+        } else if (currentRole === "bowler") {
+          document.getElementById("batterInputs").style.display = "none";
+          document.getElementById("bowlerInputs").style.display = "block";
+        }
+      } else {
+        alert("Player not found! Please try another name.");
+      }
+    }
+
+    // Step 2: Calculate performance based on user input
+    function calculatePerformance() {
+      if (!currentPlayer || !currentRole) {
+        alert("Please identify the player first.");
+        return;
+      }
+      let statsText = "";
+      if (currentRole === "batter") {
+        let runs = parseFloat(document.getElementById("runsScored").value);
+        let balls = parseFloat(document.getElementById("ballsFaced").value);
+        if (isNaN(runs) || isNaN(balls) || balls === 0) {
+          alert("Please enter valid numbers for runs and balls (balls must be greater than zero).");
+          return;
+        }
+        let strikeRate = ((runs / balls) * 100).toFixed(2);
+        statsText = `Runs Scored: ${runs} | Balls Faced: ${balls} | Strike Rate: ${strikeRate}`;
+      } else if (currentRole === "bowler") {
+        let runsGiven = parseFloat(document.getElementById("runsGiven").value);
+        let ballsBowled = parseFloat(document.getElementById("ballsBowled").value);
+        let wickets = parseFloat(document.getElementById("wicketsTaken").value);
+        if (isNaN(runsGiven) || isNaN(ballsBowled) || isNaN(wickets) || ballsBowled === 0 || wickets === 0) {
+          alert("Please enter valid numbers for runs given, balls bowled (greater than zero), and wickets taken (greater than zero).");
+          return;
+        }
+        let overs = (ballsBowled / 6).toFixed(2);
+        let economy = (runsGiven / overs).toFixed(2);
+        let bowlingSR = (ballsBowled / wickets).toFixed(2);
+        let bowlingAvg = (runsGiven / wickets).toFixed(2);
+        statsText = `Overs Bowled: ${overs} | Runs Given: ${runsGiven} | Wickets: ${wickets} <br>Economy Rate: ${economy} | Bowling Strike Rate: ${bowlingSR} | Bowling Average: ${bowlingAvg}`;
+      }
+      // Display the calculated stats
+      document.getElementById("playerStats").innerHTML = statsText;
+    }
+
+    // Helper function to capitalize words
+    function capitalize(str) {
+      return str.split(' ').map(word => word.charAt(0).toUpperCase() + word.slice(1)).join(' ');
+    }
+  </script>
+
+</body>
+</html>
